# cuda-operator-optimization-lab

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conftest.py  main.cu  pytest.ini
FlashAttentionSoftmax/docs/: README.md
FlashAttentionSoftmax/src/: flash_attn_softmax.cu
FusedResidualLN/: README.md
FusedResidualLN/benchmark/: config.json  run.sh
FusedResidualLN/docs/: README.md  benchmark.md  bottleneck_analysis.md  correctness.md  decision_log.md  interview_notes.md  kernel_analysis.md  nsight_analysis.md  optimization_history.md  problem_definition.md
FusedResidualLN/reports/: benchmark.md
FusedResidualLN/src/: fused_residual_layernorm.cu  fused_residual_layernorm_float4.cu
FusedResidualLN/tests/: test_fused_layernorm.py
LayerNorm/: README.md
LayerNorm/benchmark/: config.json  run.sh
LayerNorm/docs/: README.md  benchmark.md  bottleneck_analysis.md  correctness.md  decision_log.md  interview_notes.md  kernel_analysis.md  nsight_analysis.md  optimization_history.md  problem_definition.md
LayerNorm/reports/: benchmark.md
LayerNorm/src/: layernorm_float4.cu  layernorm_sum_sq.cu  layernorm_welford.cu
LayerNorm/tests/: test_layernorm.py
RMSNorm/: README.md
RMSNorm/benchmark/: config.json  run.sh
RMSNorm/docs/: README.md  benchmark.md  bottleneck_analysis.md  correctness.md  decision_log.md  interview_notes.md  kernel_analysis.md  (+3 more)
Softmax/: README.md
docs/: debug_log.md  optimization_notes.md  project_overview.md  roadmap.md
include/: utils.cuh
shared_docs/: Benchmark_Specification.md  Documentation_Template.md  Dump_and_Correctness_Guide.md  Engineering_Convention.md  Optimization_Methodology.md  Performance_Playbook.md  Profiling_Guide.md
src/: flash_attn_softmax.cu  fused_layernorm.cu  layernorm.cu  rmsnorm.cu  softmax.cu  utils.cuh
tests/: conftest.py  test_correctness.py  test_cuda_operators.py  test_performance.sh
(+21 files in other folders)
